src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_queries_special_characters.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ 🔍  Queries [4] ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│PID      Query                                              User             Database          Duration State             Wait            │
│1        SELECT * FROM users WHERE name = ''; DROP TABLE us user'; DROP TABL db                1.0s     active            -               │
│2        SELECT * FROM users WHERE id = 1                   user             db                1.0s     active            -               │
│3        SELECT '[31mRED[0m'   AS color                     user             db                1.0s     active            -               │
│4                                                                                              0s                                         │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
