src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_replication_empty.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ 🔄  Replication ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                                          │
│  No replication activity                                                                                                                 │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
