src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_settings_with_filter.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ ⚙️  Settings [2/3] (filter: max) ─────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Name                                          Value                                         Unit     Source             Context           │
│max_connections                               100                                           -        configuration file postmaster [restar│
│max_wal_senders                               10                                            -        default            postmaster        │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
