src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_statements_with_data.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ 📝  Statements [1] ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Query                                               Calls   Total ↓   Mean      Max       Stddev   Rows    Hit%  Reads   I/O       Temp   │
│SELECT * FROM users WHERE email = $1                10.0K   5.00 s    0.500 ms  25.0 ms   2.5 ms   10.0K   9890% 500     50.0 ms   0      │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
