src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_table_stats_empty.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 673
expression: buffer_to_string(&terminal)
---
╭ Table Stats [0] ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                                          │
│  No user tables found                                                                                                                    │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
