src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_table_stats_extreme_values.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ Table Stats [1] ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Table                                                          Size      SeqScan    IdxScan    Dead ↓     Dead%     Bloat[b] Last Vacuum  │
│public.テ ー ブ ル _with_unicode_名 前                               429496729 9223372036 0          4611686018 100.0%    99.9%    never        │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
